--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ footer {
 	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 	
- <h1><a href="home.html">Home</a></h1> &nbsp&nbsp&nbsp<h1><a href="contact.html">About us</a></h1>
+ <h1><a href="home.html">Home</a></h1> &nbsp&nbsp&nbsp<h1><a href="cantact.html">About us</a></h1>
  &nbsp&nbsp&nbsp <h1><a href="ex.html">Services</a></h1>&nbsp&nbsp&nbsp<h1><a href="Cantact.html">contact us</a></h1>
  <br><br><br><br><br><br><br><br><br><br><br>
 			<div class="p1"> THIS IS OWER <br>ELECTRONIC SHOP</div><br><br>
